# celery

./: .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  docker-compose.yml
app/: caller.py  tasks.py
workbooks/: README.md  example.ipynb  spline.ipynb  train_automation.ipynb
