[tool.poetry]
name = "spline-sandbox"
version = "0.1.0"
description = "Spline Sandbox"
authors = ["BraKistad <brakistad@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
celery = {extras = ["librabbitmq"], version = "^5.2.7"}
matplotlib = "^3.8.0"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "W292"]
include = ["app"]